--- a/src/components/views/Homepage/Homepage.module.scss
+++ b/src/components/views/Homepage/Homepage.module.scss
@@ -5,9 +5,27 @@
  }
 
  .hero {
-    margin-top: 50px;
+    margin-top: 60px;
     background-color: rgb(255, 230, 0);
     padding: 10px;
     transform: rotate(2deg);
     box-shadow: 1px 1px 5px black;
+    position: relative;
  }
+
+
+ .login{
+   border: 2px solid black;
+   background-color: rgb(255, 94, 0);
+   margin: 0 3px;
+   border-radius: 50%;
+   position: absolute;
+   box-shadow: 1px 1px 5px black;
+   transform: translateX(-50%);
+   top:-50px;
+   &:hover {
+      box-shadow: 1px 1px 10px black;
+      background-color: rgb(148, 241, 42);
+   }
+
+}
