--- a/src/components/views/Homepage/Homepage.module.scss
+++ b/src/components/views/Homepage/Homepage.module.scss
@@ -27,5 +27,16 @@
       box-shadow: 1px 1px 10px black;
       background-color: rgb(148, 241, 42);
    }
+}
 
+.corkboard {
+   margin-top: 20px;
+   border: 5px solid black;
+   background: #f0bf4d;
+   padding: 10px;
+   box-shadow: 1px 1px 5px black;
+   position: relative;
+   display:flex;
+   justify-content: space-around;
+   flex-wrap: wrap;
 }
