--- a/src/components/views/Homepage/Homepage.module.scss
+++ b/src/components/views/Homepage/Homepage.module.scss
@@ -22,6 +22,8 @@
    position: absolute;
    box-shadow: 1px 1px 5px black;
    transform: translateX(-50%);
+   height:80px;
+   min-width: 80px;
    top:-50px;
    &:hover {
       box-shadow: 1px 1px 10px black;
