--- a/src/components/views/PostEdit/PostEdit.module.scss
+++ b/src/components/views/PostEdit/PostEdit.module.scss
@@ -1,4 +1,57 @@
 @import '../../../styles/settings.scss';
 
-// .root {
-// }
+.root {
+    text-align:left;
+    display: flex;
+    justify-content: center;
+    position: relative;
+ }
+
+ .card {
+    margin-top: 60px;
+    width: 100%;
+    max-width: 500px;
+    background-color: rgb(255, 230, 0);
+    padding: 10px;
+    box-shadow: 1px 1px 5px black;
+    position: relative;
+ }
+
+ .text {
+    border: 1px dashed black;
+    padding: 5px;
+ }
+
+ .goback{
+   border: 2px solid black;
+   background-color: rgb(255, 94, 0);
+   margin: 0 3px;
+   border-radius: 50%;
+   box-shadow: 1px 1px 5px black;
+   height: 33px;
+   left:90%;
+   position: absolute;
+   min-width: 33px;
+   
+   &:hover {
+      box-shadow: 1px 1px 10px black;
+      background-color: rgb(148, 241, 42);
+   }
+}
+
+.submit{
+   border: 2px solid black;
+   background-color: rgb(255, 94, 0);
+   margin: 0 3px;
+   border-radius: 50%;
+   box-shadow: 1px 1px 5px black;
+   height: 33px;
+   min-width: 33px;
+   margin-top: 20px;
+   
+   &:hover {
+      box-shadow: 1px 1px 10px black;
+      background-color: rgb(148, 241, 42);
+   }
+}
+
