--- a/src/components/layout/MainLayout/MainLayout.module.scss
+++ b/src/components/layout/MainLayout/MainLayout.module.scss
@@ -1,7 +1,7 @@
 @import '../../../styles/settings.scss';
 
  .root {
-   background-color: rgb(241, 241, 241);
+   //background-color: rgb(241, 241, 241);
    background-size: cover;
-   background-attachment: fixed;
+   //background-attachment: fixed;
  }
