--- a/src/components/views/Post/Post.module.scss
+++ b/src/components/views/Post/Post.module.scss
@@ -39,5 +39,23 @@
    }
 }
 
+.edit{
+   border: 2px solid black;
+   background-color: rgb(0, 102, 255);
+   margin: 0 3px;
+   border-radius: 50%;
+   box-shadow: 1px 1px 5px black;
+   height: 33px;
+   left:90%;
+   bottom: 20px;
+   position: absolute;
+   min-width: 30px;
+   
+   &:hover {
+      box-shadow: 1px 1px 10px black;
+      background-color: rgb(148, 241, 42);
+   }
+}
+
 
 
